--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -2,80 +2,77 @@
 <html lang="en">
 <!-- The contents of this file are retrieved from https://intranet.canada.ca/wet/sitemenu-eng.html -->
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<!-- DataAjaxFragmentStart -->
-<!-- secondary navigation if enabled -->
-
-<div class="pnl-strt container nvbar">
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --><!-- DataAjaxFragmentStart --><!-- secondary navigation if enabled --><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head><body><div class="pnl-strt container nvbar">
   <h2 class="wb-inv">Topics menu</h2>
   <div class="row"> 
     <!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
     <ul class="list-inline menu" role="menubar">
       <li><a href="#mnuNews" class="item">News</a>
         <ul class="sm list-unstyled" id="mnuNews" role="menu">
-          <li><a href="/psc-fsc/messages/index-eng.asp" class="menuNOnclick-eng">Messages for employees</a></li>
-          <li><a href="/psc-fsc/gwi-ipg/index-eng.asp" class="menuNOnclick-eng">Government-wide initiatives</a></li>
-          <li><a href="/psc-fsc/aw-pr/index-eng.asp" class="menuNOnclick-eng">Awards and recognition</a></li>
-          <li><a href="/psc-fsc/nb-cb-eng.asp" class="menuNOnclick-eng">Newsletters and bulletins</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/messages/index-eng.asp" class="menuNOnclick-eng">Messages for employees</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-eng.asp" class="menuNOnclick-eng">Government-wide initiatives</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-eng.asp" class="menuNOnclick-eng">Awards and recognition</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-eng.asp" class="menuNOnclick-eng">Newsletters and bulletins</a></li>
 <!--          <li><a href="https://www.canada.ca/en/treasury-board-secretariat/site/proudly-serving.html" class="menuNOnclick-eng">Proudly serving Canadians</a></li>
           <li><a href="/psc-fsc/hps-vfp/index-eng.asp" class="menuNOnclick-eng">Humans of the Public Service</a></li>-->
-          <li><a href="/psc-fsc/blogs-blogues-eng.asp" class="menuNOnclick-eng">Blogs</a></li>
-          <li class="slflnk"><a href="/psc-fsc/index-eng.asp" class="menuNOnclick-eng">News – More</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/blogs-blogues-eng.asp" class="menuNOnclick-eng">Blogs</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/psc-fsc/index-eng.asp" class="menuNOnclick-eng">News – More</a></li>
         </ul>
       </li>
       <li><a href="#mnuHR" class="item">Human resources</a>
         <ul class="sm list-unstyled" id="mnuHR" role="menu">
-          <li><a href="/ppb-rpa/index-eng.asp" class="menuHROnclick-eng">Pay, pensions and benefits</a></li>
-          <li><a href="/hr-rh/ptm-grt/index-eng.asp" class="menuHROnclick-eng">Performance and talent management</a></li>
-          <li><a href="/hr-rh/ve/index-eng.asp" class="menuHROnclick-eng">Values and ethics</a></li>
-          <li><a href="/hr-rh/hw-ms/index-eng.asp" class="menuHROnclick-eng">Wellness, inclusion and diversity</a></li>
-          <li><a href="/hr-rh/pss-dfp/index-eng.asp" class="menuHROnclick-eng">Public service staffing</a></li>
-          <li><a href="/hr-rh/sbmv-sapm-eng.asp" class="menuHROnclick-eng">Services and benefits for the military and veterans</a></li>
-          <li><a href="/hr-rh/sbr-sag-eng.asp" class="menuHROnclick-eng">Services and benefits for RCMP members</a></li>
-          <li class="slflnk"><a href="/hr-rh/index-eng.asp" class="menuHROnclick-eng">Human resources – More</a></li>
+          <li><a href="https://intranet.canada.ca/ppb-rpa/index-eng.asp" class="menuHROnclick-eng">Pay, pensions and benefits</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/ptm-grt/index-eng.asp" class="menuHROnclick-eng">Performance and talent management</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/ve/index-eng.asp" class="menuHROnclick-eng">Values and ethics</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/hw-ms/index-eng.asp" class="menuHROnclick-eng">Wellness, inclusion and diversity</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/pss-dfp/index-eng.asp" class="menuHROnclick-eng">Public service staffing</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/sbmv-sapm-eng.asp" class="menuHROnclick-eng">Services and benefits for the military and veterans</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/sbr-sag-eng.asp" class="menuHROnclick-eng">Services and benefits for RCMP members</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/hr-rh/index-eng.asp" class="menuHROnclick-eng">Human resources – More</a></li>
         </ul>
       </li>
       <li><a href="#mnuCareer" class="item">Career development and learning</a>
         <ul class="sm list-unstyled" id="mnuCareer" role="menu">
-          <li><a href="/cdl-dca/fj-te/index-eng.asp" class="menuCDLOnclick-eng">Find a job</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-eng.asp" class="menuCDLOnclick-eng">Find a job</a></li>
           <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/en" class="menuCDLOnclick-eng">GCcampus</a></li>
           <li><a href="http://www.csps-efpc.gc.ca/pso-eng.aspx" class="menuCDLOnclick-eng">Public service orientation</a></li>
           <li><a href="http://www.csps-efpc.gc.ca/events/index-eng.aspx" class="menuCDLOnclick-eng">Learning events</a></li>
-          <li><a href="/cdl-dca/pd-pp/index-eng.asp" class="menuCDLOnclick-eng">Professional development</a></li>
-          <li><a href="/cdl-dca/psc-cfp/index-eng.asp" class="menuCDLOnclick-eng">Communities</a></li>
-          <li><a href="/cdl-dca/slte-fels/index-eng.asp" class="menuCDLOnclick-eng">Second language training and evaluation</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-eng.asp" class="menuCDLOnclick-eng">Professional development</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-eng.asp" class="menuCDLOnclick-eng">Communities</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-eng.asp" class="menuCDLOnclick-eng">Second language training and evaluation</a></li>
           <li><a href="http://www.forces.gc.ca/en/education-training.page" class="menuCDLOnclick-eng">Military education and training</a></li>
-          <li><a href="/cdl-dca/cpie-ccea/index-eng.asp" class="menuCDLOnclick-eng">Career Pathways Initiative for Indigenous Employees</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-eng.asp" class="menuCDLOnclick-eng">Career Pathways Initiative for Indigenous Employees</a></li>
           <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-eng.aspx" class="menuCDLOnclick-eng">Virtual team toolkit</a></li>
           <li><a href="https://wiki.gccollab.ca/M365/Home" class="menuCDLOnclick-eng">Microsoft (M365) training resources</a></li>
-          <li class="slflnk"><a href="/cdl-dca/index-eng.asp" class="menuCDLOnclick-eng">Career development and learning – More</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/cdl-dca/index-eng.asp" class="menuCDLOnclick-eng">Career development and learning – More</a></li>
         </ul>
       </li>
       <li><a href="#mnuServices" class="item">Services and tools</a>
         <ul class="sm list-unstyled" id="mnuServices" role="menu">
-          <li><a href="/wg-tg/gf-fg/index-eng.asp" class="menuSTOnclick-eng">Reporting on government finances</a></li>
-          <li><a href="/wg-tg/pdsg-pdnd/index-eng.asp" class="menuSTOnclick-eng">Policies, directives, standards and guidelines</a></li>
-          <li><a href="/wg-tg/gwa-awg-eng.asp" class="menuSTOnclick-eng">GCNetwork</a></li>
-          <li><a href="/wg-tg/forms-formulaires-eng.asp" class="menuSTOnclick-eng">Forms</a></li>
-          <li><a href="/wg-tg/bsgs-avbs-eng.asp" class="menuSTOnclick-eng">Procurement, surplus and payments</a></li>
-          <li><a href="/wg-tg/gc-cg/index-eng.asp" class="menuSTOnclick-eng">Government communications</a></li>
-          <li><a href="/wg-tg/go-sg/index-eng.asp" class="menuSTOnclick-eng">Government oversight</a></li>
-          <li><a href="/wg-tg/imt-git-eng.asp" class="menuSTOnclick-eng">Information management and technology</a></li>
-          <li><a href="/wg-tg/bo-bi/index-eng.asp" class="menuSTOnclick-eng">Buildings, offices and vehicles</a></li>
-          <li><a href="/wg-tg/l-b-eng.asp" class="menuSTOnclick-eng">Libraries</a></li>
-          <li class="slflnk"><a href="/wg-tg/index-eng.asp" class="menuSTOnclick-eng">Services and tools – More</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/gf-fg/index-eng.asp" class="menuSTOnclick-eng">Reporting on government finances</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/pdsg-pdnd/index-eng.asp" class="menuSTOnclick-eng">Policies, directives, standards and guidelines</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/gwa-awg-eng.asp" class="menuSTOnclick-eng">GCNetwork</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/forms-formulaires-eng.asp" class="menuSTOnclick-eng">Forms</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/bsgs-avbs-eng.asp" class="menuSTOnclick-eng">Procurement, surplus and payments</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/gc-cg/index-eng.asp" class="menuSTOnclick-eng">Government communications</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/go-sg/index-eng.asp" class="menuSTOnclick-eng">Government oversight</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/imt-git-eng.asp" class="menuSTOnclick-eng">Information management and technology</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/bo-bi/index-eng.asp" class="menuSTOnclick-eng">Buildings, offices and vehicles</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/l-b-eng.asp" class="menuSTOnclick-eng">Libraries</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/wg-tg/index-eng.asp" class="menuSTOnclick-eng">Services and tools – More</a></li>
         </ul>
       </li>
       <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
-          <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
-          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</span></a> </li>
-          <li> <a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</span></a> </li>
-          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-en: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
+          <li> <a href="https://gcconnex.gc.ca/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCconnex'})"> <span class="bold-gc">GC</span>connex</a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</a> </li>
+          <li> <a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</a> </li>
+          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-en: GCcollab'})"> <span class="bold-gc">GC</span>collab</a> </li>
         </ul>
       </li>
     </ul>
   </div>
 </div>
 <!-- DataAjaxFragmentEnd -->
-</html>
+</body></html>
